force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <description>רישום ודיווחי שעות עבודה לעובדים ומדריכים</description>
    <label>דיווח שעות</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>מספר דיווח</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>דיווחי שעות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>