force-app/main/default/objects/Time_Entry__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <label>תעריף שעה</label>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>