force-app/main/default/objects/Time_Entry__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <label>הפלגה מקושרת</label>
    <referenceTo>Cruise__c</referenceTo>
    <relationshipLabel>דיווחי שעות</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>