force-app/main/default/objects/Time_Entry__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>מדריך / עובד</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>דיווחי שעות</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>