force-app/main/default/objects/Time_Entry__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>שעת סיום</label>
    <length>5</length>
    <type>Text</type>
</CustomField>