force-app/main/default/objects/Time_Entry__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>סוג פעילות</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>הפלגה</fullName>
                <default>true</default>
                <label>הפלגה</label>
            </value>
            <value>
                <fullName>תורנות רציף</fullName>
            </value>
            <value>
                <fullName>תחזוקה</fullName>
            </value>
            <value>
                <fullName>חו״ל / יום מלא</fullName>
            </value>
            <value>
                <fullName>קורס</fullName>
            </value>
            <value>
                <fullName>החזר הוצאות</fullName>
            </value>
            <value>
                <fullName>בונוס</fullName>
            </value>
            <value>
                <fullName>מחלה</fullName>
            </value>
            <value>
                <fullName>חופשה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>