force-app/main/default/objects/Time_Entry__c/fields/Is_Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Generated__c</fullName>
    <label>נוצר אוטומטית מהפלגה</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>