force-app/main/default/objects/Time_Entry__c/fields/Is_Manual_Edit__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Edit__c</fullName>
    <label>נערך ידנית</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>