force-app/main/default/objects/Time_Entry__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>מכפיל</label>
    <precision>3</precision>
    <scale>2</scale>
    <defaultValue>1.0</defaultValue>
    <type>Number</type>
</CustomField>