force-app/main/default/objects/Time_Entry__c/fields/Overtime_125_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_125_Hours__c</fullName>
    <label>שעות 125%</label>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>