force-app/main/default/objects/Time_Entry__c/fields/Overtime_150_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_150_Hours__c</fullName>
    <label>שעות 150% (שבת/חג/נוספות)</label>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>