force-app/main/default/objects/Time_Entry__c/fields/Regular_Hours__c.field-meta.xml
<CustomField>
    <fullName>Regular_Hours__c</fullName>
    <label>שעות רגילות</label>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>