force-app/main/default/objects/Time_Entry__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>שעת התחלה</label>
    <length>5</length>
    <type>Text</type>
</CustomField>