force-app/main/default/objects/Time_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס דיווח</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אושר</fullName>
                <default>true</default>
                <label>אושר</label>
            </value>
            <value>
                <fullName>ממתין לאישור</fullName>
            </value>
            <value>
                <fullName>נדחה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>