force-app/main/default/objects/Time_Entry__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>סה״כ שעות</label>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>