force-app/main/default/objects/Time_Entry__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <label>שכר כולל</label>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <type>Currency</type>
</CustomField>